app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: camel-rest-sample
  name: camel-rest-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camel-rest-sample
  template:
    metadata:
      labels:
        app: camel-rest-sample
    spec:
      containers:
      - image: example-registry-quay-quay-registry.apps.cluster-n2gmg.n2gmg.sandbox1085.opentlc.com/admin/camel-rest-sample:latest
        imagePullPolicy: Always
        name: camel-rest-sample
        ports:
        - containerPort: 8080
          protocol: TCP
