app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: camel-rest-sample
  name: camel-rest-sample
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: camel-rest-sample
  sessionAffinity: None
  type: ClusterIP
